change base64 impl